--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                         if (element['geometry']){
                           // console.log({ element });
                           if (geojsonFeature.length === 0){
-                            // console.log("Пуст")
+                            // console.log("Empty")
                             element['properties'] = [element['properties']]
                             geojsonFeature.push(element)
                           }
