--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                  id: 'mapbox/streets-v11',
                  tileSize: 512,
                  zoomOffset: -1,
-                 accessToken: 'pk.eyJ1IjoiZGVtZXRyYW5hZHlhIiwiYSI6ImNrem9ibnB4YjBhNTkyeHBlbmczanY5b3IifQ.o46pd8G55-3CjW27dY0V2A'
+                 accessToken: 'pk.eyJ1IjoieW9uZ2lseXUxIiwiYSI6ImNrenlrems0dTAxYXgzanRmNDRsaXRzNjkifQ.vc6Qs6Inz3_uP3mJVi90Tg'
              }).addTo(map);
             var layerGeo = null
             layerGroup.addTo(map);
